Fix for <le-overflow-menu> trigger buttons to stretch to the full height

--- a/packages/core/src/components/le-button-group/le-button-group.css
+++ b/packages/core/src/components/le-button-group/le-button-group.css
@@ -70,6 +70,7 @@ le-visibility {
 
 .button-group-overflow {
   display: inline-flex;
+  align-self: stretch;
 }
 
 .button-group-more-trigger {
